<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/favoritesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/favoritesSubText"/>

    <TextView
        android:id="@+id/favoritesSubText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artists_record"
        android:textSize="15sp"
        android:textColor="@color/bottom_navigation_view"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/favoritesText"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/border_1_fav"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/favoritesSubText"/>

    <TextView
        android:id="@+id/artistTextFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artists"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_1_fav"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/border_2_fav"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/artistTextFavorites"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerArtistFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/border_2_fav"/>

    <TextView
        android:id="@+id/recordTextFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerArtistFav"/>

    <View
        android:layout_width="match_parent"
        android:id="@+id/border_3_fav"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/recordTextFavorites"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRecordFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/border_3_fav"/>


</androidx.constraintlayout.widget.ConstraintLayout>