<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Here you put the rest of your current view-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/searchBar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SearchText"
            android:background="@drawable/tile_shape">

            <ImageView
                android:id="@+id/iconeSearch"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/searchBar"
                app:layout_constraintLeft_toLeftOf="@id/searchBar"
                android:src="@drawable/ic_recherche_loupe"/>


            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:layout_constraintLeft_toRightOf="@id/iconeSearch"
                app:layout_constraintTop_toTopOf="@id/searchBar"
                app:layout_constraintRight_toLeftOf="@id/cancel_search"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <ImageView
                android:id="@+id/cancel_search"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_recherche_annuler"
                app:layout_constraintRight_toRightOf="@id/searchBar"
                app:layout_constraintTop_toTopOf="@id/searchBar"
                android:layout_margin="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:id="@+id/border_1"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/searchBar"/>

        <TextView
            android:id="@+id/artistTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border_1"/>

        <View
            android:layout_width="match_parent"
            android:id="@+id/border_2"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/artistTextSearch"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerArtistSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/border_2"/>

        <TextView
            android:id="@+id/recordTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerArtistSearch"/>

        <View
            android:layout_width="match_parent"
            android:id="@+id/border_3"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/recordTextSearch"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecordSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/border_3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
